// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering results loaded 1`] = `
<div
  className={
    Object {
      "data-css-1g83m8j": "",
    }
  }
>
  <div
    className="p-a300 css-17cwx2g"
  >
    <form
      acceptCharset="UTF-8"
      action="/lookup"
      className="sf sf--y sf--md"
      method="get"
      onSubmit={[Function]}
      role="search"
    >
      <div
        className="sf-i"
      >
        <input
          aria-label="Search field"
          className="sf-i-f"
          name="q"
          onChange={[Function]}
          placeholder="Search by case ID or keywords…"
          type="text"
          value=""
        />
        <button
          className="sf-i-b"
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
  </div>
  <h2
    className="a11y--h"
  >
    Search Results
  </h2>
  <a
    className="p-a300 css-hlpxua"
    data-request-id="17-000000001"
    href="/reports/17-000000001"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "inherit",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1bo6x5a": "",
        }
      }
      style={
        Object {
          "backgroundImage": "url(/static/img/311-logo-white-on-grey.svg)",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1bo6x5a": "",
          }
        }
        style={
          Object {
            "backgroundImage": "url()",
          }
        }
      />
    </div>
    <div
      className={
        Object {
          "data-css-1mz2sc3": "",
        }
      }
    >
      <h4
        className="t--intro t--ellipsis css-1fzcvxa"
      >
        Cosmic Intervention
      </h4>
      <div
        className={
          Object {
            "data-css-1p1d70l": "",
          }
        }
      >
        I think that Thanos is here
      </div>
      <div
        style={
          Object {
            "paddingTop": 5,
          }
        }
      >
        <span
          className="t--upper t--sans css-14tkn0p"
        >
          Opened
        </span>
        <span
          className="t--info"
          style={
            Object {
              "fontSize": 14,
            }
          }
        >
          4 minutes ago
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`rendering with request selected 1`] = `
<div
  className={
    Object {
      "data-css-1g83m8j": "",
    }
  }
>
  <div
    className="p-a300 css-17cwx2g"
  >
    <form
      acceptCharset="UTF-8"
      action="/lookup"
      className="sf sf--y sf--md"
      method="get"
      onSubmit={[Function]}
      role="search"
    >
      <div
        className="sf-i"
      >
        <input
          aria-label="Search field"
          className="sf-i-f"
          name="q"
          onChange={[Function]}
          placeholder="Search by case ID or keywords…"
          type="text"
          value=""
        />
        <button
          className="sf-i-b"
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
  </div>
  <h2
    className="a11y--h"
  >
    Search Results
  </h2>
  <a
    className="p-a300 css-hlpxua"
    data-request-id="17-000000001"
    href="/reports/17-000000001"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "color": "inherit",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1bo6x5a": "",
        }
      }
      style={
        Object {
          "backgroundImage": "url(/static/img/311-logo-grey-on-white.svg)",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1bo6x5a": "",
          }
        }
        style={
          Object {
            "backgroundImage": "url()",
          }
        }
      />
    </div>
    <div
      className={
        Object {
          "data-css-1mz2sc3": "",
        }
      }
    >
      <h4
        className="t--intro t--ellipsis css-1fzcvxa"
      >
        Cosmic Intervention
      </h4>
      <div
        className={
          Object {
            "data-css-1p1d70l": "",
          }
        }
      >
        I think that Thanos is here
      </div>
      <div
        style={
          Object {
            "paddingTop": 5,
          }
        }
      >
        <span
          className="t--upper t--sans css-14tkn0p"
        >
          Opened
        </span>
        <span
          className="t--info"
          style={
            Object {
              "fontSize": 14,
            }
          }
        >
          4 minutes ago
        </span>
      </div>
    </div>
  </a>
</div>
`;
